# KIdefix

./: CMakeLists.txt  README.MD
doc/: README.MD
example/: build_test.cpp
include/carry/: carry.cpp  carry.h
include/follow/: follow.cpp  follow.h
include/start/: start.cpp  start.h
include/statemachine/: statemachine.cpp  statemachine.h
include/stop/: stop.cpp  stop.h
include/vision/: vision.cpp  vision.h  vision.py
tests/: Code Photo detection.py  Image detection new.txt  QR-Code Scanner.py  Training_and_detecting_custom_objects.txt  detecting_custom_objects.py  main.cpp  python_integration.cpp
